переходы и структура уп

--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -58,7 +58,7 @@
                     <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Timer" />
                 </MudGrid>
                 <MudGrid Justify="Justify.Center">
-                    <MudText Typo="Typo.caption" Class="mt-4">Деревянный <s>сундук</s> программист</MudText>
+                    <MudText Typo="Typo.caption" Class="mt-4">SunduCAM</MudText>
                 </MudGrid>
             </MudPaper>
         </MudLink>
