--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -12,6 +12,16 @@
                 </MudGrid>
             </MudPaper>
         </MudLink>
+        <MudLink Href="/nc" Underline="Underline.None">
+            <MudPaper Class="pa-8 ma-2">
+                <MudGrid Justify="Justify.Center">
+                    <MudIcon Size="Size.Large" Icon="fas fa-digital-tachograph" />
+                </MudGrid>
+                <MudGrid Justify="Justify.Center">
+                    <MudText Typo="Typo.caption" Class="mt-4">SunduCAM</MudText>
+                </MudGrid>
+            </MudPaper>
+        </MudLink>
         <MudLink Href="/thread" Underline="Underline.None">
             <MudPaper Class="pa-8 ma-2">
                 <MudGrid Justify="Justify.Center">
@@ -49,16 +59,6 @@
                 </MudGrid>
                 <MudGrid Justify="Justify.Center">
                     <MudText Typo="Typo.caption" Class="mt-4">Расчеты времени</MudText>
-                </MudGrid>
-            </MudPaper>
-        </MudLink>
-        <MudLink Href="/nc" Underline="Underline.None">
-            <MudPaper Class="pa-8 ma-2">
-                <MudGrid Justify="Justify.Center">
-                    <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Timer" />
-                </MudGrid>
-                <MudGrid Justify="Justify.Center">
-                    <MudText Typo="Typo.caption" Class="mt-4">SunduCAM</MudText>
                 </MudGrid>
             </MudPaper>
         </MudLink>
